2025-02-23 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Remove dead/redundant code.

2025-02-22 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Replace direct access to _G.tempOfs with a function.
      Remove AOP_IDX dead code.
      Replace several instances of storeRegTempIfSurv with storeRegTempIfUsed.

2025-02-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3834.c:
	  Provide required external definition of inline function.
	* src/SDCCopt.c,
	  src/f8/main.c,
	  src/port.h,
	  src/stm8/main.c:
	  Simplify equality operator handling.

2025-02-17 Gabriele Gorla <gorlik@yahoo.com>

	* support/regression/tests/gcc-touture-execute-2010030-1.c:
      Disable gcc-touture-execute-2010030-1 for mos6502-stack-auto.
    * src/mos6502/gen.c:
      Improve loadRegFromAop().
   	* src/mos6502/peeph.def:
	  Additional peephole rule for store after load at the same address.

2025-02-16 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Several improvements to stack code generation.
	  Improvements in genCmp() and genCast().
	
2025-02-15 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve code generation for stack accesses.
	* src/mos6502/peeph.def:
	  Additional peephole rules.

2025-02-15 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCsymt.h,
	  support/regression/cases/Makefile.in,
	  support/regression/tests/compound-literal.c:
	  Implement compound literals (C99, see RFE #332).

2025-02-14 Gabriele Gorla <gorlik@yahoo.com>

	* device/lib/mos6502/div.s,
	  device/lib/mos6502/ldiv.s,
	  device/lib/mos6502/_divuint.s,
	  device/lib/mos6502/_divulong.s:
	  Implement div and ldiv in assembly.

2025-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Remove incorrect workaround for gte-991019-1.
	  Fix shifts3 and muldiv failures on mos6502-stack-auto.
